--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - .:/app
       - /app/node_modules
       - /app/.next
-    command: sh -c "npm install && npm run build && npx prisma migrate deploy && npm start"
+    command: sh ./docker-entrypoint.sh
 
   db:
     image: postgres:15-alpine
